--- a/linux_os/guide/system/accounts/accounts-physical/require_emergency_target_auth/ansible/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-physical/require_emergency_target_auth/ansible/shared.yml
@@ -4,7 +4,7 @@
 # complexity = low
 # disruption = low
 
-- name: require emergency mode password
+- name: Require emergency mode password
   lineinfile:
       create: yes
       dest: /usr/lib/systemd/system/emergency.service
