--- a/linux_os/guide/system/auditing/configure_auditd_data_retention/auditd_audispd_syslog_plugin_activated/ansible/shared.yml
+++ b/linux_os/guide/system/auditing/configure_auditd_data_retention/auditd_audispd_syslog_plugin_activated/ansible/shared.yml
@@ -4,7 +4,7 @@
 # complexity = low
 # disruption = low
 
-- name: enable syslog plugin
+- name: Enable syslog plugin
   lineinfile:
     dest: {{{ audisp_conf_path }}}/plugins.d/syslog.conf
     regexp: "^active"
