--- a/linux_os/guide/system/selinux/selinux-booleans/sebool_selinuxuser_execstack/rule.yml
+++ b/linux_os/guide/system/selinux/selinux-booleans/sebool_selinuxuser_execstack/rule.yml
@@ -2,7 +2,7 @@ documentation_complete: true
 
 prodtype: ol7,ol8,ol9,rhel7,rhel8,rhel9,rhv4,sle12,sle15
 
-title: 'disable the selinuxuser_execstack SELinux Boolean'
+title: 'Disable the selinuxuser_execstack SELinux Boolean'
 
 description: |-
     By default, the SELinux boolean <tt>selinuxuser_execstack</tt> is enabled.
