--- a/linux_os/guide/services/usbguard/usbguard_allow_hid_and_hub/ansible/shared.yml
+++ b/linux_os/guide/services/usbguard/usbguard_allow_hid_and_hub/ansible/shared.yml
@@ -4,4 +4,4 @@
 # strategy = configure
 # disruption = low
 
-{{{ ansible_lineinfile(msg='allow HID devices and hubs', path='/etc/usbguard/rules.conf', regex='', new_line='allow with-interface match-all { 03:*:* 09:00:* }', create='yes', state='present') }}}
+{{{ ansible_lineinfile(msg='Allow HID devices and hubs', path='/etc/usbguard/rules.conf', regex='', new_line='allow with-interface match-all { 03:*:* 09:00:* }', create='yes', state='present') }}}
