--- a/linux_os/guide/system/network/network-ipv6/configuring_ipv6/sysctl_net_ipv6_conf_default_accept_redirects/rule.yml
+++ b/linux_os/guide/system/network/network-ipv6/configuring_ipv6/sysctl_net_ipv6_conf_default_accept_redirects/rule.yml
@@ -19,6 +19,7 @@ identifiers:
     cce@sle15: CCE-85722-7
 
 references:
+    anssi: BP28(R22)
     cis-csc: 11,14,3,9
     cis@alinux2: 3.2.2
     cis@alinux3: 3.3.2
