--- a/linux_os/guide/system/network/network-ipv6/configuring_ipv6/sysctl_net_ipv6_conf_default_accept_source_route/rule.yml
+++ b/linux_os/guide/system/network/network-ipv6/configuring_ipv6/sysctl_net_ipv6_conf_default_accept_source_route/rule.yml
@@ -27,6 +27,7 @@ identifiers:
     cce@sle15: CCE-85653-4
 
 references:
+    anssi: BP28(R22)
     cis-csc: 1,12,13,14,15,16,18,4,6,8,9
     cis@alinux2: 3.2.1
     cis@alinux3: 3.3.1
