service_timesyncd_enabled: Add packagename@ubuntu2204

--- a/linux_os/guide/services/ntp/service_timesyncd_enabled/rule.yml
+++ b/linux_os/guide/services/ntp/service_timesyncd_enabled/rule.yml
@@ -49,3 +49,4 @@ template:
         servicename: systemd-timesyncd
         packagename: systemd
         packagename@ubuntu2004: systemd-timesyncd
+        packagename@ubuntu2204: systemd-timesyncd
