--- a/controls/cup_fedora.yml
+++ b/controls/cup_fedora.yml
@@ -6,21 +6,49 @@ version: '1.0.0'
 source: TBD
 
 controls:
+###
 ### 1. Hardware and its configuration
+###
   - id: 1.1
     title: Protection of the BIOS or UEFI
     description: >-
-      Users should protect their BIOS or UEFI with a password
+      Users should protect their BIOS or UEFI with a password.
     status: manual
     
   - id: 1.2
     title: Proper BIOS or UEFI configuration
     description: >-
-      Users should disable features and devices in the BIOS or UEFI that are not in use and should only include trusted devices in the boot order
+      Users should disable features and devices in the BIOS or UEFI that are not in use and should only include trusted devices in the boot order.
     status: manual
     
   - id: 1.3
     title: 64-bit OS
     description: >-
-      When possible, users should use a 64-bit system and hardware that supports it
+      When possible, users should use a 64-bit system and hardware that supports it.
+    status: manual
+ ###
+ ### 2. System installation
+ ###
+  - id: 2.1
+    title: Security policy selection
+    description: >-
+      Users should apply the “Fedora Common User Security Policy” in the installer.
+    status: manual
+    
+  - id: 2.2
+    title: Disk partitioning
+    description: >-
+      Users should put the /home, /tmp, /var, /var/tmp and /var/log directories on separate partitions.
+    status: manual 
+    
+  - id: 2.3
+    title: Password security
+    description: >-
+      Users should ensure that all account passwords adhere to the password rules in rule 4.1.
+    status: manual
+    
+  - id: 2.4
+    title: Disk encryption
+    description: >-
+      Users should encrypt their disk with a passphrase that adheres to the password rules in rule 4.1.
     status: manual
