RHCOS4: Updated rule for rhel9 based RHCOS
Added a new CPE for rhel9 rhcos, disabled iptables rule for rhel9-rhcos4, iptables is being replaced by iptables-nft. Added a new rule to detect if iptables-nft is being installed.

--- a/controls/nist_rhcos4.yml
+++ b/controls/nist_rhcos4.yml
@@ -4922,6 +4922,7 @@ controls:
   - audit_rules_execution_setsebool
   - file_permissions_sshd_config
   - package_iptables_installed
+  - package_iptables-nft_installed
   - audit_rules_dac_modification_removexattr
   - audit_rules_unsuccessful_file_modification_lchown
   - audit_rules_unsuccessful_file_modification_openat_o_trunc_write
