--- a/linux_os/guide/system/logging/log_rotation/ensure_logrotate_activated/rule.yml
+++ b/linux_os/guide/system/logging/log_rotation/ensure_logrotate_activated/rule.yml
@@ -5,7 +5,7 @@ title: 'Ensure Logrotate Runs Periodically'
 description: |-
     The <tt>logrotate</tt> utility allows for the automatic rotation of
     log files.  The frequency of rotation is specified in <tt>/etc/logrotate.conf</tt>,
-    which triggers a cron task.  To configure logrotate to run daily, add or correct
+    which triggers a cron task or a timer.  To configure logrotate to run daily, add or correct
     the following line in <tt>/etc/logrotate.conf</tt>:
     <pre># rotate log files <i>frequency</i>
     daily</pre>
