bugfix: service_enabled/ansible: service does not have masked parameter
This aligns with service_disabled.

--- a/shared/templates/service_enabled/ansible.template
+++ b/shared/templates/service_enabled/ansible.template
@@ -9,11 +9,15 @@
     package_facts:
       manager: auto
 
+{{%- if init_system == "systemd" %}}
   - name: Enable service {{{ SERVICENAME }}}
-    service:
+    systemd:
       name: "{{{ DAEMONNAME }}}"
       enabled: "yes"
       state: "started"
       masked: "no"
     when:
     - '"{{{ PACKAGENAME }}}" in ansible_facts.packages'
+{{%- else %}}
+JINJA TEMPLATE ERROR: Unknown init system '{{{ init_system }}}'
+{{%- endif %}}
