--- a/controls/cup_fedora.yml
+++ b/controls/cup_fedora.yml
@@ -52,3 +52,28 @@ controls:
     description: >-
       Users should encrypt their disk with a passphrase that adheres to the password rules in rule 4.1.
     status: manual
+###
+### 3. General system configuration
+###
+  - id: 3.1
+    title: Bootloader security
+    description: >-
+      If the BIOS or UEFI does not allow password protection of the boot process, users should set a bootloader password.
+    status: partial
+    rules:
+      # BIOS
+      - file_groupowner_grub2_cfg
+      - file_groupowner_user_cfg
+      - file_owner_grub2_cfg
+      - file_owner_user_cfg
+      - file_permissions_grub2_cfg
+      - file_permissions_user_cfg
+      - grub2_password # only check
+      # UEFI
+      - file_groupowner_efi_grub2_cfg
+      - file_groupowner_efi_user_cfg
+      - file_owner_efi_grub2_cfg
+      - file_owner_efi_user_cfg
+      - file_permissions_efi_grub2_cfg
+      - file_permissions_efi_user_cfg
+      - grub2_uefi_password # only check
