--- a/linux_os/guide/services/ntp/service_chronyd_or_ntpd_enabled/ansible/shared.yml
+++ b/linux_os/guide/services/ntp/service_chronyd_or_ntpd_enabled/ansible/shared.yml
@@ -7,8 +7,9 @@
   ansible.builtin.package_facts:
     manager: auto
 
+{{%- if init_system == "systemd" %}}
 - name: Start ntpd service if ntp installed
-  service:
+  systemd:
     name: "ntpd"
     enabled: "yes"
     state: "started"
@@ -17,9 +18,12 @@
 
 
 - name: Start chronyd service if chrony or chronyd installed
-  service:
+  systemd:
     name: "chronyd"
     enabled: "yes"
     state: "started"
     masked: "no"
   when: ('chrony' in ansible_facts.packages) or ('chronyd' in ansible_facts.packages)
+{{%- else %}}
+JINJA TEMPLATE ERROR: Unknown init system '{{{ init_system }}}'
+{{%- endif %}}
