bugfix: usbguard_generate_policy/ansible: service does not have masked parameter

--- a/linux_os/guide/services/usbguard/usbguard_generate_policy/ansible/shared.yml
+++ b/linux_os/guide/services/usbguard/usbguard_generate_policy/ansible/shared.yml
@@ -36,10 +36,14 @@
       state: present
     when: not policy_file.stat.exists or policy_file.stat.size == 0
 
+{{%- if init_system == "systemd" %}}
   - name: Enable service usbguard
-    service:
+    systemd:
       name: "usbguard"
       enabled: "yes"
       state: "started"
       masked: "no"
   when: '"usbguard" in ansible_facts.packages'
+{{%- else %}}
+JINJA TEMPLATE ERROR: Unknown init system '{{{ init_system }}}'
+{{%- endif %}}
