Fix rule 3.3 status

--- a/controls/cup_fedora.yml
+++ b/controls/cup_fedora.yml
@@ -87,8 +87,8 @@ controls:
   - id: 3.3
     title: Filesystem configuration
     description: >-
-      AUTOMATIC /home (-noexec), /tmp, /var, /var/tmp and /var/log mount option configuration
-    status: partial
+      /home (-noexec), /tmp, /var, /var/tmp and /var/log mount option configuration
+    status: automatic
     rules:
       - mount_option_home_nodev
       - mount_option_home_nosuid
