--- a/controls/cup_fedora.yml
+++ b/controls/cup_fedora.yml
@@ -107,3 +107,19 @@ controls:
       - kernel_module_cramfs_disabled
       - kernel_module_squashfs_disabled
       - kernel_module_udf_disabled
+
+  - id: 3.4
+    title: Crypto policy
+    description: >-
+      system cryto policy configuation and ensuring it is not overridden in critical components
+    status: automatic
+    rules:
+      - configure_crypto_policy
+      - var_system_crypto_policy=default_policy
+      - configure_bind_crypto_policy
+      - configure_gnutls_tls_crypto_policy
+      - configure_kerberos_crypto_policy
+      - configure_libreswan_crypto_policy
+      - configure_openssl_crypto_policy
+      - configure_openssl_tls_crypto_policy
+      - configure_ssh_crypto_policy
