Remove redundant platforms from partitions/mount_option_* rules
As the mount_options template now correctly handles missing
mount points there is no need to add a safeguard platform
to these rules.

--- a/linux_os/guide/system/permissions/partitions/mount_option_var_tmp_nodev/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_var_tmp_nodev/rule.yml
@@ -44,7 +44,7 @@ references:
     stigid@rhel8: RHEL-08-040132
 
 platforms:
-  - machine and partition-var-tmp
+  - machine
 
 template:
     name: mount_option
