New rule ensure_chrony_is_configured

--- a/controls/anssi.yml
+++ b/controls/anssi.yml
@@ -1307,6 +1307,7 @@ controls:
     # Based on DAT-NT-012 R3
     - package_chrony_installed
     - chronyd_specify_remote_server
+    - chronyd_configures_time_sources
 
     # Derived from DAT-NT-012 R4
     - partition_for_var_log_audit
