--- a/applications/openshift/authentication/ocp_idp_no_htpasswd/rule.yml
+++ b/applications/openshift/authentication/ocp_idp_no_htpasswd/rule.yml
@@ -2,6 +2,14 @@ prodtype: ocp4
 
 title: "Do Not Use htpasswd-based IdP"
 
+{{% set default_jqfilter = '.spec' %}}
+{{% set default_api_path = '/apis/config.openshift.io/v1/oauths/cluster' %}}
+{{% set hypershift_path = '/apis/hypershift.openshift.io/v1beta1/namespaces/clusters/hostedclusters/{{.hypershift_cluster}}' %}}
+{{% set hypershift_jqfilter = '.spec.configuration.oauth' %}}
+{{% set custom_api_path = '{{if ne .hypershift_cluster "None"}}' ~ hypershift_path ~ '{{else}}' ~  default_api_path ~ '{{end}}' %}}
+{{% set custom_jqfilter = '{{if ne .hypershift_cluster "None"}}' ~ hypershift_jqfilter ~ '{{else}}' ~  default_jqfilter ~ '{{end}}' %}}
+{{% set dump_path = default_api_path ~ ',' ~ default_jqfilter ~ ',' ~ custom_jqfilter %}}
+
 description: |-
   <p>
   For users to interact with OpenShift Container Platform, they must first
@@ -72,15 +80,15 @@ ocil: |-
 severity: medium
 
 warnings:
-    - general: |-
-        {{{ openshift_cluster_setting("/apis/config.openshift.io/v1/oauths/cluster") | indent(8) }}}
+- general: |-
+    {{{ openshift_filtered_cluster_setting({custom_api_path: dump_path}) | indent(4) }}}
 
 template:
     name: yamlfile_value
     vars:
         ocp_data: 'true'
-        filepath: /apis/config.openshift.io/v1/oauths/cluster
-        yamlpath: ".spec.identityProviders[:].type"
+        filepath: {{{ openshift_filtered_path(default_api_path, default_jqfilter) }}}
+        yamlpath: ".identityProviders[:].type"
         check_existence: "any_exist"
         values:
             - value: "HTPasswd"
