--- a/applications/openshift/authentication/ocp_no_ldap_insecure/rule.yml
+++ b/applications/openshift/authentication/ocp_no_ldap_insecure/rule.yml
@@ -2,6 +2,15 @@ prodtype: ocp4
 
 title: "Only Use LDAP-based IdPs with TLS"
 
+{{% set default_jqfilter = '.spec' %}}
+{{% set default_api_path = '/apis/config.openshift.io/v1/oauths/cluster' %}}
+{{% set hypershift_path = '/apis/hypershift.openshift.io/v1beta1/namespaces/clusters/hostedclusters/{{.hypershift_cluster}}' %}}
+{{% set hypershift_jqfilter = '.spec.configuration.oauth' %}}
+{{% set custom_api_path = '{{if ne .hypershift_cluster "None"}}' ~ hypershift_path ~ '{{else}}' ~  default_api_path ~ '{{end}}' %}}
+{{% set custom_jqfilter = '{{if ne .hypershift_cluster "None"}}' ~ hypershift_jqfilter ~ '{{else}}' ~  default_jqfilter ~ '{{end}}' %}}
+{{% set dump_path = default_api_path ~ ',' ~ default_jqfilter ~ ',' ~ custom_jqfilter %}}
+
+
 description: |-
   <p>
   For users to interact with OpenShift Container Platform, they must first
@@ -59,14 +68,14 @@ ocil: |-
 
 warnings:
 - general: |-
-    {{{ openshift_cluster_setting("/apis/config.openshift.io/v1/oauths/cluster") | indent(4) }}}
+    {{{ openshift_filtered_cluster_setting({custom_api_path: dump_path}) | indent(4) }}}
 
 template:
     name: yamlfile_value
     vars:
         ocp_data: 'true'
-        filepath: /apis/config.openshift.io/v1/oauths/cluster
-        yamlpath: ".spec.identityProviders[:].ldap.insecure"
+        filepath: {{{ openshift_filtered_path(default_api_path, default_jqfilter) }}}
+        yamlpath: ".identityProviders[:].ldap.insecure"
         check_existence: "any_exist"
         values:
             - value: true
