Add mypy test for utils/check_eof

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -171,6 +171,7 @@ macro(mypy_test SCRIPT)
 endmacro()
 
 mypy_test("utils/import_srg_spreadsheet.py")
+mypy_test("utils/check_eof.py")
 
 if (PYTHON_VERSION_MAJOR GREATER 2 AND PY_OPENPYXL AND PY_PANDAS AND SSG_PRODUCT_RHEL9)
     add_test(
