--- a/linux_os/guide/system/software/updating/security_patches_up_to_date/policy/stig/shared.yml
+++ b/linux_os/guide/system/software/updating/security_patches_up_to_date/policy/stig/shared.yml
@@ -19,7 +19,7 @@ checktext: |-
     Verify {{{ full_name }}} security patches and updates are installed and up to date.
     Updates are required to be applied with a frequency determined by organizational policy.
 
-    {{% if "Red Hat" in full_name or "ol" in product %}}
+    {{% if vendor is defined %}}
     Obtain the list of available package security updates from {{{ vendor }}}. The URL for updates
     is {{{ url }}}. It is important to note that updates provided by {{{ vendor }}} may not be
     present on the system if the underlying packages are not installed.
