bugfix: display_login_attempts: bad product comparison against ubuntu
This did not work as expected with ubuntu as comparison was using exact
match, but "ubuntu" here is just substring of actual products.

--- a/linux_os/guide/system/accounts/accounts-pam/display_login_attempts/ansible/shared.yml
+++ b/linux_os/guide/system/accounts/accounts-pam/display_login_attempts/ansible/shared.yml
@@ -4,7 +4,7 @@
 # complexity = low
 # disruption = low
 
-{{% if product in ["sle12", "sle15", "ubuntu"] %}}
+{{% if product in ["sle12", "sle15"] or "ubuntu" in product %}}
 {{{ ansible_ensure_pam_module_configuration('/etc/pam.d/login', 'session', 'required', 'pam_lastlog.so', 'showfailed', '', 'BOF') }}}
 {{{ ansible_remove_pam_module_option_configuration('/etc/pam.d/login', 'session', '', 'pam_lastlog.so', 'silent') }}}
 {{% else %}}
