fix: yamllint: allow consistent indentation
Because of usage of CDumper identation does not match what yamllint
expects by default. Change values to match current situation and pass
yamllint-check tests.

Because of usage of CDumper indent-sequences is not consistent.

--- a/tests/yamllint_config.yml
+++ b/tests/yamllint_config.yml
@@ -2,6 +2,9 @@
 extends: default
 
 rules:
+  indentation:
+    spaces: consistent
+    indent-sequences: whatever
   line-length:
     level: warning
     max: 160
