fix: yamllint: require document-start as checked documents have it

--- a/tests/yamllint_config.yml
+++ b/tests/yamllint_config.yml
@@ -2,6 +2,8 @@
 extends: default
 
 rules:
+  document-start:
+    present: true
   indentation:
     spaces: consistent
     indent-sequences: whatever
@@ -15,4 +17,3 @@ rules:
   empty-lines:
     level: warning
   truthy: disable
-  document-start: {present: false}
