--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -316,6 +316,12 @@ macro(ssg_controlrefcheck_test PRODUCT CONTROL KEY)
     endif()
 endmacro()
 
-ssg_controlrefcheck_test("rhel7" "cis_rhel7" "cis")
-ssg_controlrefcheck_test("rhel8" "cis_rhel8" "cis")
-ssg_controlrefcheck_test("rhel9" "cis_rhel9" "cis")
+if (SSG_PRODUCT_RHEL7)
+    ssg_controlrefcheck_test("rhel7" "cis_rhel7" "cis")
+endif()
+if (SSG_PRODUCT_RHEL8)
+    ssg_controlrefcheck_test("rhel8" "cis_rhel8" "cis")
+endif()
+if (SSG_PRODUCT_RHEL9)
+    ssg_controlrefcheck_test("rhel9" "cis_rhel9" "cis")
+endif()
