--- a/controls/pcidss_4.yml
+++ b/controls/pcidss_4.yml
@@ -149,10 +149,10 @@ controls:
       rules:
         - set_ipv6_loopback_traffic
         - set_loopback_traffic
+        - set_ip6tables_default_rule
 
     - id: Req-1.4.2
-      title: '1.4.2 Inbound traffic from untrusted networks to trusted networks is restricted
-        to'
+      title: '1.4.2 Inbound traffic from untrusted networks to trusted networks is restricted'
       levels:
         - base
       status: automated
@@ -164,6 +164,8 @@ controls:
         - kernel_module_dccp_disabled
         - kernel_module_sctp_disabled
         - kernel_module_dccp_disabled
+        - sysctl_net_ipv4_conf_all_send_redirects
+        - sysctl_net_ipv4_conf_default_send_redirects
 
     - id: Req-1.4.3
       title: '1.4.3 Anti-spoofing measures are implemented to detect and block forged source
@@ -171,8 +173,17 @@ controls:
         addresses cannot enter a trusted network.'
       levels:
         - base
-      status: pending
-      rules: []
+      status: automated
+      rules:
+        - wireless_disable_interfaces
+        - package_iptables_installed
+        - sysctl_net_ipv4_tcp_syncookies
+        - sysctl_net_ipv4_conf_default_accept_redirects
+        - sysctl_net_ipv4_icmp_echo_ignore_broadcasts
+        - sysctl_net_ipv4_icmp_ignore_bogus_error_responses
+        - sysctl_net_ipv6_conf_default_accept_source_route
+        - sysctl_net_ipv4_conf_all_rp_filter
+        - sysctl_net_ipv4_conf_all_secure_redirects
 
     - id: Req-1.4.4
       title: '1.4.4 System components that store cardholder data are not directly accessible
@@ -251,11 +262,14 @@ controls:
       - configure_openssl_crypto_policy
     controls:
     - id: Req-2.2.1
-      title: '2.2.1 Configuration standards are developed, implemented, and maintained to'
+      title: '2.2.1 Configuration standards are developed, implemented, and maintained to cover
+        all system components'
       levels:
         - base
-      status: pending
-      rules: []
+      status: partial
+      rules:
+        - bios_enable_execution_restrictions
+        - install_PAE_kernel_on_x86
 
     - id: Req-2.2.2
       title: '2.2.2 Vendor default accounts are managed as follows'
@@ -302,6 +316,7 @@ controls:
         - service_cups_disabled
         - service_rpcbind_disabled
         - service_rsyncd_disabled
+        - mask_nonessential_services
 
 
     - id: Req-2.2.5
@@ -1402,6 +1417,7 @@ controls:
         - accounts_root_gid_zero
         - group_unique_id
         - group_unique_name
+        - account_unique_name
 
     - id: Req-8.2.2
       title: '8.2.2 Group, shared, or generic accounts, or other shared authentication
@@ -1686,6 +1702,8 @@ controls:
         - accounts_umask_etc_profile
         - no_direct_root_logins
         - securetty_root_login_console_only
+        - no_shelllogin_for_systemaccounts
+        - use_pam_wheel_for_su
 
     - id: Req-8.6.2
       title: '8.6.2 Passwords/passphrases for any application and system accounts that can be
