--- a/linux_os/guide/system/accounts/accounts-restrictions/account_expiration/account_unique_name/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/account_expiration/account_unique_name/rule.yml
@@ -32,6 +32,7 @@ references:
     cjis: 5.5.2
     disa: CCI-000770,CCI-000804
     pcidss: Req-8.1.1
+    pcidss4: Req-8.2.1
 
 ocil_clause: 'a line is returned'
 
